test/fail_compilation/test20549.d
module test;

alias AliasSeq(T...) = T;

enum a = AliasSeq!test;
